# 3D_Project_Kinectfusion

./: CMakeLists.txt  README.md  main.cpp
include/: Configuration.h  KinectFusion.h  MarchingCube_cpu.h  SimpleMesh.h  VirtualSensor.h  common.h  data_types.h  mc_tables.h
other/c_code/: Frame.h  ICPOptimizer.h  NearestNeighbor.h  PointCloud_ori.h  ProcrustesAligner.h  main_test.cpp
other/cuda_code/: ComputeVertex_ori.cu  surface_reconstruction_old.cu
src/: FreeImageHelper.cpp  KinectFusion.cpp  bilateral.cpp  pose_estimation.cpp  pyrdown.cpp  surface_measurement.cpp  visual.cpp
src/cuda/: ComputeNormal.cu  ComputeVertex.cu  MarchingCube.cu  MarchingCube_old.cu  extract_pointcloud.cu  pose_estimation.cu  surface_prediction_2d.cu  surface_prediction_3d.cu  surface_reconstruction_2d.cu  surface_reconstruction_3d.cu  surface_reconstruction_weight.cu
